2005-10-09 Scott Dattalo <scott@dattalo.com>
	* regression/tmr0_16bit/tmr0_16bit.asm: More tmr0 regressions
	testing
	* src/cod.cc, src/breakpoints.h, src/breakpoints.cc: Added the
	CommandAssertion class. These are assertions that are associated
	with instructions in such a way that when an instruction executes,
	the command assertion will issue a gpsim command line command.
	* gpsim/main.cc: removed a debug printf.
	* cli/input.cc, cmd_macro.cc, cli/ui_gpsim.cc: command assertions
	were getting inserted into the end of the command line input
	stream as opposed to interjected immediately.

2005-10-10 Scott Dattalo <scott@dattalo.com>
	* gpsim/main.cc, cli/cmd_load.cc, cli/cmd_symbol.cc,
	src/symbol.cc, src/symbol.h: Simplified the way user defined
	symbols are added to the symbol table.

2005-10-09 Borut Razem <borut.razem@siol.net>
	* plat/win32/fd2raw.cpp, cli/input.cc: win32_set_is_readable() not
	  needed for glib >= 2.6
	* src/sim_context.cc, src/i2c_ee.cc: fixed the p12ce518 regression
	  test problem
	* cli/socket.cc: g_io_channel_set_flags() not implemented on WIN32;
	  call it only on non-WIN32 platforms or if _DEBUG

2005-10-08 Scott Dattalo <scott@dattalo.com>
	* src/tmr0.cc, regression/tmr0_16bit/tmr0_16bit.asm: tmr0
	clear_break was getting called recursively. The tmr0 regression
	test now checks psa combinations.

2005-10-08 Robert Pearce <rob@bdt-home.demon.co.uk>
	* src/p12x.cc, src/p16x5x.cc, src/p16x5x.h, src/stimuli.cc,
	src/tmr0.cc, src/tmr0.h: Added support for clocking TMR0 from an
	external source. This applies to the 12-bit core where TMR0 is a
	dedicated pin.

2005-10-08 Borut Razem <borut.razem@siol.net>
	* src/processor.cc: fixed the "processor list" problem
	* gpsim/makefile.mingw, gpsim/gpsim.vcproj, plat/win32/gpsim.nsi,
	  doc/gpsimWin32.html: linking with libgtkextra-win32-2.1_dll.lib,
	  using gtkextra-win32-2.1.dll

2005-10-07 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.nsi: Changed version to 0.24.11
